tests/reference/asr-fixed_form_call3-7519dcc.stderr
syntax error: Token 'FAILURE' (of type 'identifier') is unexpected here
 --> tests/fixed_form_call3.f:1:3
  |
1 | c FAILURE test 
  |   ^^^^^^^ 
